<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".Signup"

    >


    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:drawableLeft="@drawable/baseline_arrow_back_24"
        android:fontFamily="@font/aldrich"
        android:text="@string/back"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText

        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/buttonborder"
        android:drawableLeft="@drawable/baseline_person_24"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/name"
        android:paddingLeft="20dp"
        android:paddingTop="13dp"
        android:paddingRight="20dp"
        android:paddingBottom="13dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/emailIs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/buttonborder"
        android:drawableLeft="@drawable/baseline_email_24"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:paddingTop="13dp"
        android:paddingRight="20dp"
        android:paddingBottom="13dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="14sp"

        />

    <EditText
        android:id="@+id/passwordIs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/buttonborder"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="13dp"
        android:paddingRight="20dp"
        android:paddingBottom="13dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="14sp"

        />

    <EditText
        android:id="@+id/repasswordIs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/buttonborder"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/Re_Enter"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="13dp"
        android:paddingRight="20dp"
        android:paddingBottom="13dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/headings_colr"
        android:textColorHint="@color/black"
        android:textSize="14sp"

        />

    <RadioGroup
        android:id="@+id/radioGroupRole"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="clip_vertical"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radioDoctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:text="I am a Doctor"/>

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radioPatient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="I am a Patient"/>
    </RadioGroup>


    <Button
        android:id="@+id/btnsignup"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/signup"
        android:textSize="16dp"
        app:cornerRadius="20dp"

        />

    <TextView
        android:id="@+id/already_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:background="@drawable/customrectangle"
        android:padding="12dp"
        android:text="@string/alreadyacc"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/black" />
    <Button
        android:id="@+id/btngoogle"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/buttonborder"
        android:text="@string/sgoogle"
        android:layout_gravity="center"
        android:textSize="14sp"
        app:cornerRadius="20dp"
        android:textColor="@color/black"

        /> <Button
    android:id="@+id/btnfacebook"
    android:layout_width="336dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/buttonborder"
    android:text="@string/sfacebook"
    android:textSize="14sp"
    android:textColor="@color/black"
    app:cornerRadius="20dp"
    tools:ignore="DuplicateIds" />

</LinearLayout>
</androidx.core.widget.NestedScrollView>