<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MyFirstScreen">

    <ImageView
        android:id="@+id/HeaderImage"
        android:layout_width="338dp"
        android:layout_height="186dp"
        android:layout_marginBottom="-20dp"
        app:srcCompat="@drawable/myfalogo"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-121dp" />

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/headingwelcome"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/slogan"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/create1btn"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="140dp"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/newAccount"
        app:cornerRadius="100dp"
        android:paddingStart="24dp"
        android:paddingTop="11dp"
        android:paddingEnd="24dp"
        android:paddingBottom="11dp"
        />
    <Button
        android:id="@+id/login1btn"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
android:background="@drawable/buttonborder"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/login1"
        app:cornerRadius="100dp"
        android:paddingStart="144dp"
        android:paddingTop="11dp"
        android:paddingEnd="144dp"
        android:paddingBottom="11dp"
        android:textColor="@color/custom_edittext"
        />



</LinearLayout>